--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-lazy-load": "^3.0.10",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7"
   },
