--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "express": "^4.14.0",
     "material-ui": "^0.15.4",
     "mtgsdk": "^0.1.1",
+    "pouchdb": "^6.0.4",
     "qwest": "^4.4.5",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-lazy-load": "^3.0.10",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-pouchdb": "0.0.8",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7"
